feat(backend): 代码格式化